# consistent_depth

./: .flake8  .gitignore  README.md  consistent-deph.py  install.ps1  installv1.ps1  installv2.ps1  mypy.ini  pyproject.toml
consistent_depth/cli/: cli.py  params.py
consistent_depth/processes/: video.py
docs/: opencv-cmake-build-options.txt
tests/: __init__.py  conftest.py  test_app_entry.py
tests/processes/: test_video_ffmpeg.py  test_video_frames.py
tools/: build_opencv_CPU_MKL_TBB.bat
tools/posh/: Build-On-Sandbox.ps1  Build-OpenCV.ps1  Install-MsBuildTools.ps1  Install-Python.bat  Install-PythonDeps.ps1  Install-oneAPI.bat  Test-On-Sandbox.ps1  install-Pyenv.ps1  install-opencv.ps1  utils.ps1
tools/win/: Build-On-Sandbox.ps1  Build-OpenCV.ps1  Install-Git.ps1  Install-Intel-oneAPI.ps1  Install-MsBuildTools.ps1  Install-Python.ps1  Install-PythonDeps.ps1  Install-Vcpkg.ps1  utils.ps1
